[GUI]Fixing hide-text extend functionality on firefox

--- a/actions/addfoldernode/resources/css/style.css
+++ b/actions/addfoldernode/resources/css/style.css
@@ -24,13 +24,7 @@
  */
 .themes .actions a {
   display: block;
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden; }
-
-.themes .actions a {
-  display: block;
-  text-indent: 100%;
+  text-indent: 110%;
   white-space: nowrap;
   overflow: hidden; }
 
