--- a/xmd/style/jquery/ximdex_theme/widgets/themes/_extends.scss
+++ b/xmd/style/jquery/ximdex_theme/widgets/themes/_extends.scss
@@ -61,7 +61,7 @@
 
   %hide-text{
             display: block;
-            text-indent: 100%;
+            text-indent: 110%;
             white-space: nowrap;
             overflow: hidden;
         }
