--- a/xmd/style/jquery/ximdex_theme/widgets/themes/_ximdex_theme.scss
+++ b/xmd/style/jquery/ximdex_theme/widgets/themes/_ximdex_theme.scss
@@ -209,9 +209,4 @@
 	//***************/
 
 
-	%hide-text{
-        	display: block;
-        	text-indent: 100%;
-        	white-space: nowrap;
-        	overflow: hidden;
-        }	
+	
